--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 3% 15%;
   display: flex;
   flex-direction: column;
-  background-color: bisque;
+  background-color: rgb(250, 233, 212);
   font-family: 'Times New Roman', Times, serif;
 }
 
