--- a/src/style/home.css
+++ b/src/style/home.css
@@ -45,4 +45,13 @@
     .home-page {
         align-items: center;
     }
+
+    .home-page-info {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    .home-page-info > h1 {
+        font-size: 30px;
+    }
 }
