--- a/src/style/personalProjects.css
+++ b/src/style/personalProjects.css
@@ -1,7 +1,9 @@
 .development {
+    margin-top: 3%;
+    margin-left: 15%;
+    margin-right: 15%;
     display: flex;
     flex-direction: column;
-    height: 90vh;
     background-color: rgb(244,241,235);
     font-family: 'Times New Roman', Times, serif;
 }
