--- a/src/style/personalProjects.css
+++ b/src/style/personalProjects.css
@@ -16,6 +16,7 @@
 
 .single-project {
   margin: 20px 100px 10px 100px;
+  border-bottom: 2px solid grey;
 }
 
 .project-link {
@@ -34,6 +35,7 @@
 }
 
 .project-language {
+  font-style: italic;
   margin-left: 50px;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -42,17 +44,18 @@
 .project-description {
   margin-left: 50px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 1200px) {
   .development {
-    height: 95vh;
     margin: 0%;
+    margin-top: 3%;
   }
 
   .single-project {
     margin-left: 0px;
+    margin-right: 0px;
   }
   .project-title {
     text-align: left;
