--- a/src/style/home.css
+++ b/src/style/home.css
@@ -34,6 +34,12 @@
     font-size: 18px;
 }
 
+.home-about-me-end {
+    margin-top: 28px;
+    margin-bottom: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+}
 .head-shot {
     margin-top: 2rem;
     width: 200px;
